--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.user-container {
+  margin: 15px;
+  width: 215px;
+  height: auto;
+  padding: 5px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #000;
+  font-style: italic;
+  background-color: #fff;
+  cursor: pointer;
+}
+.modal {
+  width: 500px;
+  height: 550px;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+.list-info{
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+}
+.user-info,
+.user-container p {
+  padding-left: 10px;
+  margin: 8px;
+}
+.accent-text {
+  margin-right: 10px;
+  font-weight: bolder;
+  font-style: normal;
+}
+.list-text {
+  margin: 0px;
+}
+.reset-btn,
+select,
+.input-name {
+  width: 30%;
+  margin: 15px auto;
+  padding: 10px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #000;
+  cursor: pointer;
+}
+select {
+  width: 20%;
+}
+.reset-btn {
+  width: 15%;
+}
+.wrapper{
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto;
+}
+header{
+  width: 100%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.modal-back {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, .6);
+  width: 100%;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-picture {
+  display: block;
+  width: 50px;
+  margin: 0 auto;
+  padding: 10px; 
 }
