Added main logic with switching next/previous pages, validation of inputs

--- a/hw3/src/components/Input/Input.css
+++ b/hw3/src/components/Input/Input.css
@@ -18,3 +18,11 @@
 .input_title {
     margin: 10px 0px 0px;
 }
+span {
+    color: red;
+    display: none;
+    text-align: start;
+}
+input:invalid ~ span {
+    display: block;
+}
