Improved form validation logic

--- a/hw3/src/components/Input/Input.css
+++ b/hw3/src/components/Input/Input.css
@@ -23,6 +23,9 @@ span {
     display: none;
     text-align: start;
 }
-input:invalid ~ span {
+/* input:invalid[focused=true] {
+    border: 1px solid red;
+} */
+input:invalid[focused=true] ~ span {
     display: block;
 }
