Added avatar image logic with download photo and choose default icon

--- a/hw3/src/components/FifthStep/FifthStep.css
+++ b/hw3/src/components/FifthStep/FifthStep.css
@@ -7,3 +7,10 @@
     text-align: left;
     /* text-transform: capitalize; */
 }
+.avatar_img {
+    width: 130px;
+    border-radius: 50%;
+}
+.info_item_accent{
+    font-weight: bolder;
+}
