--- a/hw3/src/components/Input/Input.css
+++ b/hw3/src/components/Input/Input.css
@@ -29,3 +29,8 @@ span {
 input:invalid[focused=true] ~ span {
     display: block;
 }
+.choose_sign {
+    font-size: 24px;
+    font-weight: bolder;
+    color: green;
+}
