--- a/hw3/src/components/Button/Button.css
+++ b/hw3/src/components/Button/Button.css
@@ -6,14 +6,28 @@
     color: #000;
     font-size: 1.5em;
     font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.63);
     border: 1px solid #000;
     cursor: pointer;
-    margin: 45px 10px 0px;
+    margin: 15px 10px;
 }
 .btn:hover {
    background-color: #e5e3e3;   
 }
+.dark .btn{
+    background-color: #f0eeeef0;
+}
+.dark .btn:hover {
+    background-color: #fff;
+}
 .upload_btn {
     width: 70%;
     height: 60px;
+}
+.mode-btn {
+    height: 26px;
+    font-size: 14px;
+    margin: 15px;
+    padding: 0px;
 }
