--- a/hw3/src/components/Input/Input.css
+++ b/hw3/src/components/Input/Input.css
@@ -15,9 +15,14 @@
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 3px 5px 10px rgba(102, 86, 146, 0.397);
+}
+.dark .input_form {
+    background-color: #f0eeeef0;
 }
 .input_title {
-    margin: 10px 0px 0px;
+    margin: 10px 0px;
 }
 span {
     color: red;
