--- a/hw3/src/containers/MainContainer/MainContainer.css
+++ b/hw3/src/containers/MainContainer/MainContainer.css
@@ -1,8 +1,13 @@
 .input_container {
     width: 350px;
     height: auto;
-    margin: 30px auto;
+    margin: 0px auto;
     border: 1px solid #000;
-    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.63);
+    padding: 10px;
 
+}
+.dark .input_container  {
+    background-color: #e5e3e3e8;
 }
